# Noema

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  GLOSSARY.md  Makefile  NOEMA_PLAN_LOG.md  OVERVIEW.md  PROJECT_STATUS.md  README.md  RUNBOOK.md  RUN_ON_WINDOWS.md  STORAGE.md
backend/: .env.example  pyproject.toml  requirements-windows.txt  requirements.txt
backend/app/: auth_store.py  beliefs.py  config.py  conversation_store.py  docling_parse.py  llm_client.py  main.py  memory.json  memory_judge.py  memory_store.py  pdf_extract.py  pipeline.py  saves.py  schemas.py
backend/app/bench/: __init__.py  archive.py  datasets.py  estimate.py  fetch.py  goldgen.py  humanqa.py  jobs.py  qasper.py  report.py  runner.py  scoring.py  store.py
backend/app/chunking/: CHUNKING.md  __init__.py  base.py  markdown_chunker.py  tokens.py
backend/app/graph/: GRAPH.md  __init__.py  base.py  config.py  evolution.py  manager.py  providers.py  schema.py  server.py  store.py  viz.py
backend/app/lightrag/: __init__.py  manager.py  providers.py  store.py
backend/app/parsing/: PARSING.md  __init__.py  base.py  dispatch.py  docintel.py  vision.py
backend/app/retrieval/: CONTEXTUAL.md  RETRIEVAL.md  __init__.py  answer.py  base.py  bm25.py  contextual.py  index_cache.py  ingest.py  rerank.py  search.py  store.py
backend/app/routers/: admin.py  auth.py  beliefs.py  bench.py  chat.py  conversations.py  documents.py  graphmem.py  lightragmem.py  memory.py  system.py  textgraph.py
backend/app/textgraph/: __init__.py  cooccurrence.py  stopwords.py  store.py
studies/: README.md  (+11 more)
(+204 files in other folders)
